--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "bt3",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --exec babel-node src/server.ts"
   },
   "author": "",
   "license": "ISC",
